# plex-mcp

./: .gitignore  DOCKER_OVERVIEW.md  Dockerfile  Makefile  README.md  docker-compose.sse.yml  docker-compose.stdio.yml  pyproject.toml
src/plex_mcp/: client.py  server.py
src/plex_mcp/tools/: library.py  movies.py  music.py  playback.py  playlists.py  tv.py
tests/: conftest.py  test_movies.py  test_playlists.py
