[project]
name = "plex-mcp"
version = "0.1.0"
description = "A comprehensive MCP server for Plex Media Server — movies, TV shows, music, playlists, playback control, and library management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "lordraw77" }]
keywords = ["plex", "mcp", "media-server", "llm", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "plexapi>=4.16.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
plex-mcp = "plex_mcp.server:main"

[project.urls]
Homepage = "https://github.com/lordraw77/plex-mcp"
Repository = "https://github.com/lordraw77/plex-mcp"
Issues = "https://github.com/lordraw77/plex-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
